Fix overflow titles

--- a/src/style.css
+++ b/src/style.css
@@ -106,6 +106,7 @@ h6 {
   margin-bottom: var(--spacing-6);
   line-height: var(--lineHeight-tight);
   letter-spacing: -0.025em;
+  overflow-wrap: break-word;
 }
 
 h2,
